# eatgf-engine

./: CHANGELOG.md  LICENSE  PUBLIC_RELEASE_CHECKLIST.md  README.md  pyproject.toml
.github/workflows/: engine-ci.yml
adapter/: __init__.py  main.py  schemas.py
eatgf_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eatgf_engine/cli/: main.py
eatgf_engine/engine/: org_profile_validator.py
tests/: ci_invalid_status.json
